--- a/src/Makefile
+++ b/src/Makefile
@@ -3,12 +3,12 @@ BUILD=../build
 export CROSS_AS=m6809-unknown-as
 export CROSS_LD=m6809-unknown-ld
 export CROSS_CC=m6809-unknown-gcc
-export CROSS_CCOPTS=-c -Wall -Os -msoft-reg-count=0 -mfar-stack-param -mcode-section=.text
+export CROSS_CCOPTS=-c -Wall -Os -msoft-reg-count=0 -mfar-stack-param -mcode-section=.text -I .
 # Workaround for gcc6809 bug - register copy propagation issue
-CROSS_CCOPTS += -fno-cprop-registers
+#CROSS_CCOPTS += -fno-cprop-registers
 
 
-OBJS=crt0 commonmem main drivers uart
+OBJS=crt0 commonmem main drivers uart stdlib stdlib_s stdio string
 
 B_OBJS=$(addprefix $(BUILD)/, $(addsuffix .o, $(OBJS)))
 
@@ -22,5 +22,5 @@ $(BUILD)/%.o: %.s
 
 
 $(BUILD)/boot-menu.srec: $(B_OBJS)
-	$(CROSS_LD) -o $@ -Map=../boot-menu.map --script=boot-menu.link --oformat=srec $(B_OBJS)
+	$(CROSS_LD) -o $@ -Map=../boot-menu.map --script=boot-menu.link --oformat=srec $(B_OBJS) /usr/lib/gcc/m6809-unknown/4.6.4/libgcc.a
 	
