refactor and general tidy up

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ export CROSS_CCOPTS=-c -Wall -Os -msoft-reg-count=0 -mfar-stack-param -mcode-sec
 #CROSS_CCOPTS += -fno-cprop-registers
 
 
-OBJS=crt0 commonmem main uart stdlib stdlib_s stdio string ctype crc16
+OBJS=crt0 commonmem main uart stdlib stdlib_s stdio string ctype crc16 membuf srec flash
 
 B_OBJS=$(addprefix $(BUILD)/, $(addsuffix .o, $(OBJS)))
 
