dump command, memw

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,12 +3,12 @@ BUILD=../build
 export CROSS_AS=m6809-unknown-as
 export CROSS_LD=m6809-unknown-ld
 export CROSS_CC=m6809-unknown-gcc
-export CROSS_CCOPTS=-c -Wall -Os -msoft-reg-count=0 -mfar-stack-param -mcode-section=.text -I .
+export CROSS_CCOPTS=-std=c99 -c -Wall -Os -msoft-reg-count=0 -mfar-stack-param -mcode-section=.text -I .
 # Workaround for gcc6809 bug - register copy propagation issue
 #CROSS_CCOPTS += -fno-cprop-registers
 
 
-OBJS=crt0 commonmem main uart stdlib stdlib_s stdio string ctype crc16 membuf srec flash
+OBJS=crt0 commonmem main uart stdlib stdlib_s stdio string ctype crc16 membuf memw srec flash
 
 B_OBJS=$(addprefix $(BUILD)/, $(addsuffix .o, $(OBJS)))
 
