NEW: line editing

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,10 +8,10 @@ export CROSS_CCOPTS=-std=c99 -c -Wall -Os -msoft-reg-count=0 -mfar-stack-param -
 #CROSS_CCOPTS += -fno-cprop-registers
 
 
-OBJS=crt0 commonmem main uart stdlib stdlib_s stdio string ctype crc16 membuf memw srec flash boot
+OBJS=crt0 commonmem main uart stdlib stdlib_s stdio string ctype crc16 membuf memw srec flash boot rdline
 B_OBJS=$(addprefix $(BUILD)/, $(addsuffix .o, $(OBJS)))
 
-OBJS_R=crt0_rom commonmem main uart stdlib stdlib_s stdio string ctype crc16 membuf memw srec flash boot
+OBJS_R=crt0_rom commonmem main uart stdlib stdlib_s stdio string ctype crc16 membuf memw srec flash boot rdline
 B_OBJS_R=$(addprefix $(BUILD)/, $(addsuffix .o, $(OBJS_R)))
 
 X:=$(shell mkdir -p $(BUILD))
@@ -28,9 +28,11 @@ $(BUILD)/%.o: %.s
 $(BUILD)/boot-menu.srec: $(B_OBJS)
 	$(CROSS_LD) -o $@ -Map=$(patsubst %.srec,%.map,$@) --script=boot-menu.link --oformat=srec -L/usr/lib/gcc/m6809-unknown/4.6.4/ -lgcc $^
 	cat ../basic/runme.txt $@ > $(patsubst %.srec,%.run.srec, $@)
+	srec_cat $@ -offset -0xE00 -o $(basename $@).bin -binary
 
 $(BUILD)/boot-menu-rom.srec: $(B_OBJS_R)
 	$(CROSS_LD) -o $@ -Map=$(patsubst %.srec,%.map,$@) --script=boot-menu-rom.link --oformat=srec -L/usr/lib/gcc/m6809-unknown/4.6.4/ -lgcc $^
+	srec_cat $@ -fill 0xFF 0xC000 0xFFFF -offset -0xC000 -o $(basename $@).bin -binary
 
 clean:
 	-rm $(BUILD)/boot-menu.run.srec
